fix alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -536,6 +536,13 @@ a {
     width: 50px;
     height: 50px;
   }
+  .flex-centered-v-h-sm, .flex-centered-h-v-sm {
+    align-items: center;
+  }
+  
+  .flex-centered-v-v-sm, flex-centered-h-h-sm {
+    justify-content: center;
+  }
 }
 
 #sketches-container {
